<resources>
    <string name="app_name">ChatBulb</string>
    <string name="scroll_bar_text">This is a main ScrollBar in which all other elements are Added.</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="email">Enter your email!</string>
    <string name="password">Enter your password!</string>
    <string name="sign_in">Sign In</string>
    <string name="new_acc_text">Create New Account</string>
    <string name="add_img">Add image</string>
    <string name="name">Enter your name!</string>
    <string name="confirm_password">Enter your password again!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_text">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="select_user">Select User</string>
    <string name="message">Message</string>
    <string name="online">Online</string>
</resources>